--- a/app/src/main/res/layout/s1_item_smart_home.xml
+++ b/app/src/main/res/layout/s1_item_smart_home.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    style="@style/StewardCard"
+    android:layout_marginEnd="10dp"
+    android:layout_marginStart="10dp"
     android:layout_marginTop="10dp">
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <TextView
