--- a/app/src/main/res/layout/fragment_parking_order.xml
+++ b/app/src/main/res/layout/fragment_parking_order.xml
@@ -8,6 +8,7 @@
     <include layout="@layout/toolbar" />
 
     <TextView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
@@ -21,6 +22,7 @@
         android:textSize="15sp" />
 
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:gravity="center_vertical">
@@ -44,6 +46,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:gravity="center_vertical">
@@ -236,7 +239,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="30dp"
         android:lineSpacingExtra="10dp"
-        android:text="温馨提示：\n确认缴费后请在15分钟内离场，否则将会重新计算费用！"
+        android:text="温馨提示：\n应缴金额以支付时间为准，确认缴费后请在15分钟内离场，否则将会重新计算费用！"
         android:textColor="@color/red_text"
         android:textSize="15sp" />
 
