--- a/app/src/main/res/layout/fragment_property_pay_list.xml
+++ b/app/src/main/res/layout/fragment_property_pay_list.xml
@@ -16,7 +16,7 @@
         cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
         cube_ptr:ptr_resistance="1.7">
 
-        <com.aglhz.abase.widget.statemanager.StateLayout
+        <cn.itsite.statemanager.StateLayout
             android:id="@+id/stateLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layoutAnimation="@anim/layout_dock_left_enter" />
-        </com.aglhz.abase.widget.statemanager.StateLayout>
+        </cn.itsite.statemanager.StateLayout>
 
     </in.srain.cube.views.ptr.PtrFrameLayout>
 
