--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -10,15 +10,14 @@
         android:layout_height="match_parent">
         <!-- 定义一个Fragment容器，用于装载不同的Fragment组件 ，
             如VideoFragment或AudioFragment-->
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_marginTop="100dp"
             android:orientation="horizontal">
 
-
-        </LinearLayout>
+        </FrameLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
