--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -19,7 +19,7 @@
         app:ptr_ratio_of_header_height_to_refresh="1.2"
         app:ptr_resistance="1.7">
 
-        <com.aglhz.abase.widget.statemanager.StateLayout
+        <cn.itsite.statemanager.StateLayout
             android:id="@+id/stateLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -32,7 +32,7 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-        </com.aglhz.abase.widget.statemanager.StateLayout>
+        </cn.itsite.statemanager.StateLayout>
 
     </in.srain.cube.views.ptr.PtrFrameLayout>
 
