--- a/app/src/main/res/layout/fragment_password_opendoor.xml
+++ b/app/src/main/res/layout/fragment_password_opendoor.xml
@@ -86,7 +86,10 @@
             android:id="@+id/tv_door_name_password_opendoor_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_down_gray_56px" />
+            android:drawableRight="@drawable/ic_down_gray_56px"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/base_black" />
     </LinearLayout>
 
     <View
