--- a/app/src/main/res/layout/item_home_fragment_rv_banner.xml
+++ b/app/src/main/res/layout/item_home_fragment_rv_banner.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="180dp" />
 
-    <FrameLayout
+    <!--<FrameLayout
         android:id="@+id/fl_item_banner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
             android:text="切换"
             android:textColor="@color/white"
             android:textSize="14sp" />
-    </FrameLayout>
+    </FrameLayout>-->
 
 
 </FrameLayout>
