--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -372,4 +372,49 @@
         <!-- <item name="android:backgroundDimEnabled">false</item> -->
         <!-- 模糊 -->
     </style>
+
+
+    <!--todo（高亮）ccccccccccccccccccc ConstraintLayout布局相关 cccccccccccccccccccccc-->
+    <style name="CLineStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/base_line</item>
+        <item name="android:layout_height">1dp</item>
+    </style>
+
+    <style name="CFormTextStyle">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:textColor">@color/base_black</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="CFormEditStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="CGoodsTypeGridLLStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="CGoodsTypeGridTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:textColor">@color/base_black</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
 </resources>
