--- a/app/src/main/res/layout/fragment_parking_charge.xml
+++ b/app/src/main/res/layout/fragment_parking_charge.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
@@ -9,11 +8,7 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/toolbar"
-        android:layout_height="0dp"
-        android:layout_width="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+        layout="@layout/toolbar" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -31,13 +26,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="7dp"
+        android:layout_marginStart="7dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/base_black"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
-        android:layout_marginStart="7dp" />
+        app:layout_constraintLeft_toRightOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/tv_plate_parking_charge_fragment"
@@ -75,7 +70,7 @@
 
     <android.inputmethodservice.KeyboardView
         android:id="@+id/keyboard"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#D0D5D9"
         android:focusable="true"
@@ -88,123 +83,7 @@
         android:shadowColor="#FFFFFF"
         android:shadowRadius="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="8dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <!--
-     <LinearLayout
-         android:layout_width="0dp"
-         android:layout_height="60dp"
-         android:gravity="center_vertical"
-         tools:layout_editor_absoluteX="8dp"
-         tools:layout_editor_absoluteY="0dp">
-
-         <TextView
-             android:layout_width="0dp"
-             android:layout_height="wrap_content"
-             android:layout_marginLeft="15dp"
-             android:layout_weight="1"
-             android:text="缴费车辆"
-             android:textColor="@color/gray_text"
-             android:textSize="15sp" />
-
-         <TextView
-             android:id="@+id/tv_car_city"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:padding="10dp"
-             android:text="粤"
-             android:textColor="@color/base_black"
-             android:textSize="15sp" />
-
-         <EditText
-             android:id="@+id/et_input_car_num"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginRight="15dp"
-             android:background="@null"
-             android:gravity="end"
-             android:hint="输入车牌号"
-             android:lines="1"
-             android:maxLength="10"
-             android:textColor="@color/accent_text"
-             android:textColorHint="@color/default_text"
-             android:textSize="13sp" />
-     </LinearLayout>
-
-     <View
-         android:layout_width="0dp"
-         android:layout_height="10dp"
-         android:background="@color/base_grey"
-         tools:layout_editor_absoluteX="8dp"
-         tools:layout_editor_absoluteY="0dp" />
-
-     <LinearLayout
-         android:id="@+id/ll_select_park"
-         android:layout_width="0dp"
-         android:layout_height="150dp"
-         android:background="?android:attr/selectableItemBackground"
-         android:clickable="true"
-         android:focusable="true"
-         android:gravity="center"
-         android:orientation="vertical"
-         tools:layout_editor_absoluteX="8dp"
-         tools:layout_editor_absoluteY="0dp">
-
-         <ImageView
-             android:layout_width="70dp"
-             android:layout_height="70dp"
-             android:src="@drawable/ic_choseyard_280px" />
-
-         <TextView
-             android:layout_width="70dp"
-             android:layout_height="20dp"
-             android:layout_marginTop="10dp"
-             android:background="@drawable/shape_stroke_light_blue"
-             android:gravity="center"
-             android:text="选择停车场"
-             android:textColor="@color/light_blue"
-             android:textSize="11sp" />
-     </LinearLayout>
-
-     <View
-         android:layout_width="0dp"
-         android:layout_height="10dp"
-         android:background="@color/base_grey"
-         tools:layout_editor_absoluteX="8dp"
-         tools:layout_editor_absoluteY="0dp" />
-
-     <LinearLayout
-         android:id="@+id/ll_scan_pay"
-         android:layout_width="0dp"
-         android:layout_height="150dp"
-         android:background="?android:attr/selectableItemBackground"
-         android:clickable="true"
-         android:focusable="true"
-         android:gravity="center"
-         android:orientation="vertical"
-         tools:layout_editor_absoluteX="8dp"
-         tools:layout_editor_absoluteY="0dp">
-
-         <ImageView
-             android:layout_width="70dp"
-             android:layout_height="70dp"
-             android:src="@drawable/ic_orcode_280px" />
-
-         <TextView
-             android:layout_width="75dp"
-             android:layout_height="20dp"
-             android:layout_marginTop="10dp"
-             android:background="@drawable/shape_stroke_light_green"
-             android:gravity="center"
-             android:text="二维码缴费"
-             android:textColor="@color/light_green"
-             android:textSize="11sp" />
-     </LinearLayout>
-
-     <View
-         android:layout_width="0dp"
-         android:layout_height="551dp"
-         android:background="@color/base_grey"
-         tools:layout_editor_absoluteX="8dp"
-         tools:layout_editor_absoluteY="8dp" />-->
 </android.support.constraint.ConstraintLayout>
