--- a/app/src/main/res/layout/dialog_parking_charge.xml
+++ b/app/src/main/res/layout/dialog_parking_charge.xml
@@ -3,15 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    app:cardPreventCornerOverlap="true">
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="1dp"
-        app:contentPadding="0dp">
+        app:cardCornerRadius="3dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
