--- a/app/src/main/res/layout/item_rv_car_card.xml
+++ b/app/src/main/res/layout/item_rv_car_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/c"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_item_rv_car_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="18dp"
@@ -8,92 +9,109 @@
     android:layout_marginTop="18dp"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    app:cardCornerRadius="3dp">
 
-    <LinearLayout
-        android:id="@+id/ll_view_group"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_month_card_1017px_657px"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="73dp">
-
-            <TextView
-                android:id="@+id/tv_plate_num"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:layout_weight="1"
-                android:text="粤L 2356"
-                android:textColor="@color/white"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/tv_surplus_days"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="20dp"
-                android:text="还有35天"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl_header_item_rv_car_card"
+            android:layout_width="0dp"
+            android:layout_height="122dp"
+            android:background="@drawable/bg_park_card_header_orange"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/iv_delete_card"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="10dp"
-                android:padding="15dp"
-                android:src="@drawable/ic_clearcachehui_84px" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingLeft="15dp"
-            android:paddingTop="20dp">
+                android:id="@+id/iv_header"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="22dp"
+                android:src="@drawable/ic_park_white_75"
+                android:tint="@color/white_70_percent_alpha"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_name"
+                android:id="@+id/tv_park_item_rv_car_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/car_card_name"
-                android:textColor="@color/base_black"
-                android:textSize="16sp" />
+                android:layout_marginStart="7dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="凯宾斯基"
+                android:textColor="@color/white_70_percent_alpha"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_header"
+                app:layout_constraintLeft_toRightOf="@+id/iv_header" />
 
             <TextView
-                android:id="@+id/tv_phone"
+                android:id="@+id/tv_plate_item_rv_car_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:text="@string/phone"
-                android:textColor="@color/base_black"
-                android:textSize="16sp" />
+                android:layout_marginTop="17dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="粤"
+                android:textColor="@color/white"
+                android:textSize="28sp"
+                app:layout_constraintLeft_toLeftOf="@+id/iv_header"
+                app:layout_constraintTop_toBottomOf="@+id/iv_header" />
+        </android.support.constraint.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/tv_parking"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:text="@string/parking"
-                android:textColor="@color/base_black"
-                android:textSize="16sp" />
+        <TextView
+            android:id="@+id/tv_name_item_rv_car_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:padding="15dp"
+            android:text="大叔"
+            android:textColor="@color/base_black"
+            android:textSize="15sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cl_header_item_rv_car_card" />
 
-            <TextView
-                android:id="@+id/tv_term_of_validity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:text="@string/term_of_validity"
-                android:textColor="@color/base_black"
-                android:textSize="16sp" />
-        </LinearLayout>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tv_time_item_rv_car_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:padding="15dp"
+            android:text="到期时间："
+            android:textColor="@color/default_gray"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_name_item_rv_car_card"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toRightOf="@+id/tv_name_item_rv_car_card"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cl_header_item_rv_car_card" />
+
+        <View
+            android:id="@+id/view_line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/base_line"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name_item_rv_car_card" />
+
+        <TextView
+            android:id="@+id/tv_action_item_rv_car_card"
+            android:layout_width="0dp"
+            android:layout_height="27dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="立即缴费"
+            android:textColor="@color/default_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name_item_rv_car_card" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
