--- a/app/src/main/res/layout/item_rv_park_selector_type.xml
+++ b/app/src/main/res/layout/item_rv_park_selector_type.xml
@@ -9,8 +9,9 @@
     <TextView
         android:id="@+id/tv_name_item_rv_park_selector_type"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
+        android:gravity="center_vertical"
         android:text="历史记录"
         android:textColor="#99CCFF"
         android:textSize="14sp" />
@@ -19,6 +20,6 @@
         android:id="@+id/iv_clean_item_rv_park_selector_type"
         android:layout_width="35dp"
         android:layout_height="match_parent"
-        android:padding="6dp"
+        android:padding="8dp"
         android:src="@drawable/ic_clean_gray_42" />
 </LinearLayout>
