--- a/app/src/main/res/drawable/shape_stroke_gray.xml
+++ b/app/src/main/res/drawable/shape_stroke_gray.xml
@@ -6,6 +6,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/base_gray" />
+        android:color="#EEEEEE" />
 
 </shape>
