--- a/app/src/main/res/layout/fragment_car_card_pay.xml
+++ b/app/src/main/res/layout/fragment_car_card_pay.xml
@@ -3,7 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    android:background="@color/white">
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_content"
@@ -11,90 +19,97 @@
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="4dp"
+        app:cardCornerRadius="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/include">
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl_contain_car_card_pay_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layoutAnimation="@anim/layout_dock_left_enter"
-            android:paddingBottom="25dp">
+            android:layoutAnimation="@anim/layout_dock_left_enter">
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/cl_header_apply_fragment"
+                android:id="@+id/cl_header_car_card_pay_fragment"
                 android:layout_width="0dp"
                 android:layout_height="120dp"
-                android:background="@drawable/bg_carport_header_976_366"
+                android:background="@drawable/bg_apply_header_0"
                 android:layoutAnimation="@anim/layout_dock_left_enter"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
+                    android:id="@+id/iv_delete_car_card_pay_fragment"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginTop="15dp"
+                    android:tint="@color/white"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_clean_gray_42" />
+
+                <ImageView
                     android:id="@+id/iv_header"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
-                    android:src="@drawable/ic_apply_white_90"
+                    android:src="@drawable/ic_park_white_75"
                     android:tint="@color/white_70_percent_alpha"
-                    app:layout_constraintBottom_toTopOf="@+id/tv_des"
-                    app:layout_constraintLeft_toLeftOf="@+id/tv_des"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_plate_car_card_pay_fragment"
+                    app:layout_constraintLeft_toLeftOf="@+id/tv_plate_car_card_pay_fragment"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tv_title"
+                    android:id="@+id/tv_park_car_card_pay_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="7dp"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:text="办理月卡"
                     android:textColor="@color/white_70_percent_alpha"
-                    android:textSize="28sp"
-                    app:layout_constraintBottom_toTopOf="@+id/tv_des"
-                    app:layout_constraintLeft_toRightOf="@+id/iv_header"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_header"
+                    app:layout_constraintLeft_toRightOf="@+id/iv_header" />
 
                 <TextView
-                    android:id="@+id/tv_des"
+                    android:id="@+id/tv_plate_car_card_pay_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:text="按个小区收费标准收取月租费用"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="28sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+                    app:layout_constraintTop_toBottomOf="@+id/iv_header" />
             </android.support.constraint.ConstraintLayout>
 
 
             <TextView
-                android:id="@+id/tv_plate"
+                android:id="@+id/tv_name_car_card_pay_fragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="25dp"
-                android:text="车牌号"
-                android:textSize="15sp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/default_color"
+                android:textSize="18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_header_apply_fragment" />
+                app:layout_constraintTop_toBottomOf="@id/cl_header_car_card_pay_fragment" />
 
             <TextView
-                android:id="@+id/tv_plate_apply_fragment"
+                android:id="@+id/tv_phone_car_card_pay_fragment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:gravity="center|end"
-                android:hint="请输入车牌号"
-                android:textColor="@color/base_black"
-                android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_plate"
+                android:textColor="@color/default_color"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_name_car_card_pay_fragment"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintLeft_toRightOf="@+id/tv_plate"
+                app:layout_constraintLeft_toRightOf="@+id/tv_name_car_card_pay_fragment"
                 app:layout_constraintRight_toRightOf="parent" />
 
             <View
@@ -104,35 +119,35 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/base_line"
+                android:background="@color/base_gray"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_plate" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_name_car_card_pay_fragment" />
 
             <TextView
-                android:id="@+id/tv_park"
+                android:id="@+id/tv_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="25dp"
-                android:text="停车场"
+                android:layout_marginTop="15dp"
+                android:text="预缴月数"
+                android:textColor="@color/base_black"
                 android:textSize="15sp"
-                app:layout_constraintLeft_toLeftOf="@+id/tv_plate"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_name_car_card_pay_fragment"
                 app:layout_constraintTop_toBottomOf="@id/view_line_0" />
 
             <TextView
-                android:id="@+id/tv_park_apply_fragment"
+                android:id="@+id/tv_month_car_card_pay_fragment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:drawableRight="@drawable/ic_arrow_right_gray_60px"
                 android:gravity="center|end"
-                android:hint="请选择停车场"
+                android:text="一个月"
                 android:textColor="@color/base_black"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_park"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_month"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintLeft_toRightOf="@+id/tv_park"
+                app:layout_constraintLeft_toRightOf="@+id/tv_month"
                 app:layout_constraintRight_toRightOf="parent" />
 
             <View
@@ -142,34 +157,33 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/base_line"
+                android:background="@color/base_gray"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_park" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_month" />
 
             <TextView
-                android:id="@+id/tv_name"
+                android:id="@+id/tv_indate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:text="姓　名"
+                android:layout_marginTop="15dp"
+                android:text="有效期"
+                android:textColor="@color/base_black"
                 android:textSize="15sp"
-                app:layout_constraintLeft_toLeftOf="@+id/tv_park"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_month"
                 app:layout_constraintTop_toBottomOf="@id/view_line_1" />
 
-            <EditText
-                android:id="@+id/tv_name_apply_fragment"
+            <TextView
+                android:id="@+id/tv_indate_car_card_pay_fragment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:background="@null"
                 android:gravity="center|end"
-                android:hint="请输入姓名"
                 android:textColor="@color/base_black"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_name"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_indate"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintLeft_toRightOf="@+id/tv_name"
+                app:layout_constraintLeft_toRightOf="@+id/tv_indate"
                 app:layout_constraintRight_toRightOf="parent" />
 
             <View
@@ -179,36 +193,35 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/base_line"
+                android:background="@color/base_gray"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_indate" />
 
             <TextView
-                android:id="@+id/tv_phone"
+                android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="0dp"
-                android:layout_marginTop="25dp"
-                android:text="手机号码"
+                android:layout_marginTop="15dp"
+                android:text="应付金额"
+                android:textColor="@color/base_black"
                 android:textSize="15sp"
-                app:layout_constraintLeft_toLeftOf="@+id/tv_park"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_month"
                 app:layout_constraintTop_toBottomOf="@id/view_line_2" />
 
-            <EditText
-                android:id="@+id/tv_phone_apply_fragment"
+            <TextView
+                android:id="@+id/tv_amount_car_card_pay_fragment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:background="@null"
                 android:gravity="center|end"
-                android:hint="请输入手机号码"
                 android:inputType="phone"
-                android:textColor="@color/base_black"
+                android:textColor="@color/base_color"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_amount"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintLeft_toRightOf="@+id/tv_phone"
+                app:layout_constraintLeft_toRightOf="@+id/tv_amount"
                 app:layout_constraintRight_toRightOf="parent" />
 
             <View
@@ -218,66 +231,56 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/base_line"
+                android:background="@color/base_gray"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_phone" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_amount" />
 
-
-            <Button
-                android:id="@+id/bt_apply_fragment"
-                android:layout_width="150dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/selector_submit"
-                android:text="提交申请"
-                android:textColor="@color/white"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
+            <View
+                android:id="@+id/view_line_4"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="55dp"
+                android:background="@color/base_gray"
                 app:layout_constraintTop_toBottomOf="@+id/view_line_3" />
+
+            <TextView
+                android:id="@+id/tv_alipay_car_card_pay_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:drawableLeft="@drawable/ic_zhifubao_40"
+                android:gravity="center"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:text="支付宝支付"
+                android:textColor="@color/base_black"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/tv_weixin_car_card_pay_fragment"
+                app:layout_constraintTop_toBottomOf="@+id/view_line_4" />
+
+            <TextView
+                android:id="@+id/tv_weixin_car_card_pay_fragment"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:drawableLeft="@drawable/ic_wechat_40"
+                android:gravity="center"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:text="微信支付"
+                android:textColor="@color/base_black"
+                app:layout_constraintLeft_toRightOf="@+id/tv_alipay_car_card_pay_fragment"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view_line_4" />
+
+            <View
+                android:id="@+id/view_line_5"
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                android:background="@color/base_gray"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_alipay_car_card_pay_fragment"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view_line_4" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-
-    <View
-        android:id="@+id/view_indicator_0_apply_fragment"
-        android:layout_width="25dp"
-        android:layout_height="3dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/base_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/view_indicator_1_apply_fragment"
-        app:layout_constraintTop_toBottomOf="@+id/cv_content" />
-
-    <View
-        android:id="@+id/view_indicator_1_apply_fragment"
-        android:layout_width="25dp"
-        android:layout_height="3dp"
-        android:background="@color/default_gray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/view_indicator_0_apply_fragment"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cv_content" />
-
-    <android.inputmethodservice.KeyboardView
-        android:id="@+id/keyboard"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#D0D5D9"
-        android:elevation="10dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:keyBackground="@drawable/shape_bg_key"
-        android:keyTextColor="#5E5E5E"
-        android:keyTextSize="18sp"
-        android:labelTextSize="18sp"
-        android:padding="5dp"
-        android:shadowColor="#FFFFFF"
-        android:shadowRadius="0"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
