--- a/app/src/main/res/layout/fragment_carport.xml
+++ b/app/src/main/res/layout/fragment_carport.xml
@@ -19,6 +19,7 @@
         android:layout_margin="25dp"
         android:background="@drawable/bg_carport_header_976_366"
         android:elevation="8dp"
+        android:layoutAnimation="@anim/layout_dock_left_enter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include">
@@ -70,6 +71,7 @@
         android:layout_marginStart="25dp"
         android:background="@color/white"
         android:elevation="4dp"
+        android:layoutAnimation="@anim/layout_dock_left_enter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cl_header">
