--- a/app/src/main/res/layout/fragment_parking_charge.xml
+++ b/app/src/main/res/layout/fragment_parking_charge.xml
@@ -56,10 +56,12 @@
     <Button
         android:id="@+id/bt_search_parking_charge_fragment"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="33dp"
         android:layout_marginEnd="25dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/selector_submit"
+        android:enabled="false"
         android:gravity="center"
         android:text="查询停车费"
         android:textColor="@color/white"
@@ -67,6 +69,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_plate_parking_charge_fragment" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape_stroke_gray"
+        android:descendantFocusability="blocksDescendants"
+        android:layoutAnimation="@anim/layout_dock_left_enter"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_search_parking_charge_fragment" />
 
     <android.inputmethodservice.KeyboardView
         android:id="@+id/keyboard"
