--- a/app/src/main/res/layout/item_recharge_record.xml
+++ b/app/src/main/res/layout/item_recharge_record.xml
@@ -3,9 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="12dp"
+    android:layout_marginEnd="15dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginTop="5dp"
     android:background="@drawable/bg_park_payment_record_white_1020_960"
-    android:paddingBottom="30dp">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:paddingBottom="25dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -42,7 +45,7 @@
         android:maxLines="1"
         android:text="粤"
         android:textColor="@color/default_gray"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -68,7 +71,6 @@
         android:maxLines="1"
         android:text="订单号"
         android:textColor="@color/default_gray"
-        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/view_line_0" />
 
@@ -76,13 +78,12 @@
         android:id="@+id/tv_pay_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:text="有效时间"
         android:textColor="@color/default_gray"
-        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="@+id/tv_order_number"
         app:layout_constraintTop_toBottomOf="@+id/tv_order_number" />
 
@@ -90,13 +91,12 @@
         android:id="@+id/tv_charge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:text="充值金额"
         android:textColor="@color/default_gray"
-        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="@+id/tv_pay_time"
         app:layout_constraintTop_toBottomOf="@+id/tv_pay_time" />
 
@@ -104,12 +104,10 @@
         android:id="@+id/tv_order_item_recharge_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:textColor="@color/base_black"
-        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_order_number"
         app:layout_constraintRight_toRightOf="@+id/view_line_0" />
 
@@ -117,12 +115,10 @@
         android:id="@+id/tv_pay_time_item_recharge_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:textColor="@color/base_black"
-        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_pay_time"
         app:layout_constraintRight_toRightOf="@+id/view_line_0" />
 
@@ -130,12 +126,10 @@
         android:id="@+id/tv_charge_item_recharge_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
         android:textColor="@color/base_black"
-        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_charge"
         app:layout_constraintRight_toRightOf="@+id/view_line_0" />
 
@@ -148,7 +142,6 @@
         android:gravity="center"
         android:maxLines="1"
         android:text="时间"
-        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_charge" />
