--- a/app/src/main/res/layout/item_rv_car_card.xml
+++ b/app/src/main/res/layout/item_rv_car_card.xml
@@ -6,10 +6,10 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="18dp"
     android:layout_marginRight="18dp"
-    android:layout_marginTop="18dp"
-    android:background="?android:attr/selectableItemBackground"
+    android:layout_marginTop="10dp"
     android:clickable="true"
     android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="3dp">
 
     <android.support.constraint.ConstraintLayout
@@ -56,11 +56,21 @@
                 android:layout_marginTop="17dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="粤"
+                android:text="粤B12345"
                 android:textColor="@color/white"
                 android:textSize="28sp"
                 app:layout_constraintLeft_toLeftOf="@+id/iv_header"
                 app:layout_constraintTop_toBottomOf="@+id/iv_header" />
+
+            <ImageView
+                android:id="@+id/iv_stamp_item_rv_car_card"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/tv_plate_item_rv_car_card"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
         <TextView
