--- a/app/src/main/res/layout/item_rv_park_selector.xml
+++ b/app/src/main/res/layout/item_rv_park_selector.xml
@@ -6,12 +6,12 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="10dp"
     android:layout_marginStart="10dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="3dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="1dp"
-    app:contentPadding="10dp">
+    app:contentPadding="8dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -36,7 +36,8 @@
             android:paddingStart="10dp"
             android:text="凯宾斯基停车场"
             android:textColor="@color/base_black"
-            android:textSize="16sp"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_address_item_rv_park_selector"
             app:layout_constraintLeft_toRightOf="@+id/iv_item_rv_park_selector"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,7 +45,6 @@
             android:id="@+id/tv_address_item_rv_park_selector"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:paddingStart="10dp"
