--- a/app/src/main/res/layout/fragment_more_2.xml
+++ b/app/src/main/res/layout/fragment_more_2.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:background="@drawable/bg_yishequ_more_750px_600px"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:background="@drawable/bg_yishequ_more_750px_600px"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -28,12 +28,19 @@
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:text="智能中控名称"
             android:textColor="@color/white"
             android:textSize="16sp" />
+        <TextView
+            android:id="@+id/tv_device_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <View style="@style/MoreItem_LineStyle" />
@@ -52,8 +59,22 @@
             android:text="主机配网" />
     </LinearLayout>
 
-    <View style="@style/MoreItem_LineStyle" />
+    <!--<View style="@style/MoreItem_LineStyle" />
 
+    <LinearLayout
+        android:id="@+id/ll_host_authorize"
+        style="@style/MoreItem_LinearLayoutStyle">
+
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="23dp"
+            android:src="@drawable/ic_more_authorize_69" />
+
+        <TextView
+            style="@style/MoreItem_TitleStyle"
+            android:text="主机授权" />
+    </LinearLayout>
+-->
     <LinearLayout
         android:id="@+id/ll_host_manager"
         style="@style/MoreItem_LinearLayoutStyle">
@@ -104,7 +125,7 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
