--- a/app/src/main/res/layout/item_device_on_off_2.xml
+++ b/app/src/main/res/layout/item_device_on_off_2.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:text="第一路"
-        android:textColor="@color/base_black"
+        android:textColor="@color/light_blue"
         android:textSize="15sp" />
 
     <LinearLayout
@@ -23,6 +23,7 @@
 
         <LinearLayout
             android:id="@+id/ll_open"
+            android:layout_marginRight="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -41,10 +42,29 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_stop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="47dp"
+                android:layout_height="47dp"
+                android:src="@drawable/ic_stop_150px" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="停止" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="50dp"
             android:id="@+id/ll_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
             android:gravity="center"
             android:orientation="vertical">
 
