添加停车支付。

--- a/app/src/main/res/layout/dialog_parking_charge.xml
+++ b/app/src/main/res/layout/dialog_parking_charge.xml
@@ -199,7 +199,8 @@
                 android:id="@+id/tv_alipay_parking_charge_dialog"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
-                android:drawableLeft="@drawable/ic_zhifubao_40"
+                android:drawableLeft="@drawable/ic_zhifubao_60"
+                android:drawablePadding="3dp"
                 android:gravity="center"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
@@ -213,7 +214,8 @@
                 android:id="@+id/tv_weixin_parking_charge_dialog"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
-                android:drawableLeft="@drawable/ic_wechat_40"
+                android:drawableLeft="@drawable/ic_wechat_60"
+                android:drawablePadding="3dp"
                 android:gravity="center"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
